[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/SharedWorldObjects/Destructibles/Crate/Crate_apriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Project/WorldObjects/Destructables/CrushableObject/CrushableObject.gd" type="Script" id=2]
[ext_resource path="res://Project/WorldObjects/Destructables/Crate/Crate_crush/CrateCrushAnimation.tscn" type="PackedScene" id=3]
[ext_resource path="res://Project/WorldObjects/Technical/VisibilityChecker/VisibilityChecker.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Crate" type="KinematicBody2D"]
collision_layer = 19
collision_mask = 16
script = ExtResource( 2 )
crashAnimationScene = ExtResource( 3 )
background_object = true

[node name="VisibilityChecker" parent="." instance=ExtResource( 4 )]
visible = false

[node name="GroundRay1" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 128

[node name="GroundRay2" type="RayCast2D" parent="."]
position = Vector2( -8, 8 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 128

[node name="GroundRay3" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 128

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="HazardArea" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
shape = SubResource( 1 )
